// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeCalendar can hide date inputs with showDateInput={false} 1`] = `
<div
  class="rc-calendar rc-calendar-range"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-range-part rc-calendar-range-left"
      >
        <div
          style="outline:none"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position:relative"
            >
              <a
                class="rc-calendar-prev-year-btn"
                role="button"
                title="Last year (Control + left)"
              />
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2017
                </a>
              </span>
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell rc-calendar-month-panel-selected-cell rc-calendar-month-panel-current-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <span
        class="rc-calendar-range-middle"
      >
        ~
      </span>
      <div
        class="rc-calendar-range-part rc-calendar-range-right"
      >
        <div
          style="outline:none"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position:relative"
            >
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2018
                </a>
              </span>
              <a
                class="rc-calendar-next-year-btn"
                title="Next year (Control + right)"
              />
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-calendar-footer rc-calendar-range-bottom"
    >
      <div
        class="rc-calendar-footer-btn"
      >
        <a
          class="rc-calendar-today-btn rc-calendar-today-btn-disabled"
          role="button"
          title="March 29, 2017"
        >
          Back to today
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeCalendar controlled panels render controlled panels correctly 1`] = `
<div
  class="rc-calendar rc-calendar-range"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-range-part rc-calendar-range-left"
      >
        <div
          class="rc-calendar-input-wrap"
        >
          <div
            class="rc-calendar-date-input-wrap"
          >
            <input
              class="rc-calendar-input "
              value=""
            />
          </div>
        </div>
        <div
          style="outline: none;"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position: relative;"
            >
              <a
                class="rc-calendar-prev-year-btn"
                role="button"
                title="Last year (Control + left)"
              />
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2017
                </a>
              </span>
              <a
                class="rc-calendar-next-year-btn"
                title="Next year (Control + right)"
              />
            </div>
            <div
              class="rc-calendar-year-panel"
            >
              <div>
                <div
                  class="rc-calendar-year-panel-header"
                >
                  <a
                    class="rc-calendar-year-panel-prev-decade-btn"
                    role="button"
                    title="Last decade"
                  />
                  <a
                    class="rc-calendar-year-panel-decade-select"
                    role="button"
                    title="Choose a decade"
                  >
                    <span
                      class="rc-calendar-year-panel-decade-select-content"
                    >
                      2010-2019
                    </span>
                    <span
                      class="rc-calendar-year-panel-decade-select-arrow"
                    >
                      x
                    </span>
                  </a>
                  <a
                    class="rc-calendar-year-panel-next-decade-btn"
                    role="button"
                    title="Next decade"
                  />
                </div>
                <div
                  class="rc-calendar-year-panel-body"
                >
                  <table
                    cellspacing="0"
                    class="rc-calendar-year-panel-table"
                    role="grid"
                  >
                    <tbody
                      class="rc-calendar-year-panel-tbody"
                    >
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-last-decade-cell"
                          role="gridcell"
                          title="2009"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2009
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2010"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2010
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2011"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2011
                          </a>
                        </td>
                      </tr>
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2012"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2012
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2013"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2013
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2014"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2014
                          </a>
                        </td>
                      </tr>
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2015"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2015
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2016"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2016
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-selected-cell"
                          role="gridcell"
                          title="2017"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2017
                          </a>
                        </td>
                      </tr>
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2018"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2018
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2019"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2019
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled rc-calendar-year-panel-next-decade-cell"
                          role="gridcell"
                          title="2020"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2020
                          </a>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell rc-calendar-month-panel-selected-cell rc-calendar-month-panel-current-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <span
        class="rc-calendar-range-middle"
      >
        ~
      </span>
      <div
        class="rc-calendar-range-part rc-calendar-range-right"
      >
        <div
          class="rc-calendar-input-wrap"
        >
          <div
            class="rc-calendar-date-input-wrap"
          >
            <input
              class="rc-calendar-input "
              value=""
            />
          </div>
        </div>
        <div
          style="outline: none;"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position: relative;"
            >
              <a
                class="rc-calendar-prev-year-btn"
                role="button"
                title="Last year (Control + left)"
              />
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2018
                </a>
              </span>
              <a
                class="rc-calendar-next-year-btn"
                title="Next year (Control + right)"
              />
            </div>
            <div
              class="rc-calendar-year-panel"
            >
              <div>
                <div
                  class="rc-calendar-year-panel-header"
                >
                  <a
                    class="rc-calendar-year-panel-prev-decade-btn"
                    role="button"
                    title="Last decade"
                  />
                  <a
                    class="rc-calendar-year-panel-decade-select"
                    role="button"
                    title="Choose a decade"
                  >
                    <span
                      class="rc-calendar-year-panel-decade-select-content"
                    >
                      2010-2019
                    </span>
                    <span
                      class="rc-calendar-year-panel-decade-select-arrow"
                    >
                      x
                    </span>
                  </a>
                  <a
                    class="rc-calendar-year-panel-next-decade-btn"
                    role="button"
                    title="Next decade"
                  />
                </div>
                <div
                  class="rc-calendar-year-panel-body"
                >
                  <table
                    cellspacing="0"
                    class="rc-calendar-year-panel-table"
                    role="grid"
                  >
                    <tbody
                      class="rc-calendar-year-panel-tbody"
                    >
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled rc-calendar-year-panel-last-decade-cell"
                          role="gridcell"
                          title="2009"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2009
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2010"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2010
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2011"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2011
                          </a>
                        </td>
                      </tr>
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2012"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2012
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2013"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2013
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2014"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2014
                          </a>
                        </td>
                      </tr>
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2015"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2015
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2016"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2016
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-cell-disabled"
                          role="gridcell"
                          title="2017"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2017
                          </a>
                        </td>
                      </tr>
                      <tr
                        role="row"
                      >
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-selected-cell"
                          role="gridcell"
                          title="2018"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2018
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell"
                          role="gridcell"
                          title="2019"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2019
                          </a>
                        </td>
                        <td
                          class="rc-calendar-year-panel-cell rc-calendar-year-panel-next-decade-cell"
                          role="gridcell"
                          title="2020"
                        >
                          <a
                            class="rc-calendar-year-panel-year"
                          >
                            2020
                          </a>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-calendar-footer rc-calendar-range-bottom"
    >
      <div
        class="rc-calendar-footer-btn"
      >
        <a
          class="rc-calendar-today-btn rc-calendar-today-btn-disabled"
          role="button"
          title="March 29, 2017"
        >
          Back to today
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeCalendar key control 1`] = `
<div
  class="rc-calendar rc-calendar-range"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-range-part rc-calendar-range-left"
      >
        <div
          class="rc-calendar-input-wrap"
        >
          <div
            class="rc-calendar-date-input-wrap"
          >
            <input
              class="rc-calendar-input "
              value="9/1/2000"
            />
          </div>
        </div>
        <div
          style="outline: none;"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position: relative;"
            >
              <a
                class="rc-calendar-prev-year-btn"
                role="button"
                title="Last year (Control + left)"
              />
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2000
                </a>
              </span>
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell rc-calendar-month-panel-selected-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell rc-calendar-month-panel-in-range-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell rc-calendar-month-panel-selected-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <span
        class="rc-calendar-range-middle"
      >
        ~
      </span>
      <div
        class="rc-calendar-range-part rc-calendar-range-right"
      >
        <div
          class="rc-calendar-input-wrap"
        >
          <div
            class="rc-calendar-date-input-wrap"
          >
            <input
              class="rc-calendar-input "
              value="11/28/2000"
            />
          </div>
        </div>
        <div
          style="outline: none;"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position: relative;"
            >
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2001
                </a>
              </span>
              <a
                class="rc-calendar-next-year-btn"
                title="Next year (Control + right)"
              />
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-calendar-footer rc-calendar-range-bottom"
    >
      <div
        class="rc-calendar-footer-btn"
      >
        <a
          class="rc-calendar-today-btn "
          role="button"
          title="March 29, 2017"
        >
          Back to today
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeCalendar render hoverValue correctly 1`] = `
<div
  class="rc-calendar rc-calendar-range"
  tabindex="0"
>
  <div
    class="rc-calendar-panel"
  >
    <div
      class="rc-calendar-date-panel"
    >
      <div
        class="rc-calendar-range-part rc-calendar-range-left"
      >
        <div
          class="rc-calendar-input-wrap"
        >
          <div
            class="rc-calendar-date-input-wrap"
          >
            <input
              class="rc-calendar-input "
              value=""
            />
          </div>
        </div>
        <div
          style="outline:none"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position:relative"
            >
              <a
                class="rc-calendar-prev-year-btn"
                role="button"
                title="Last year (Control + left)"
              />
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2017
                </a>
              </span>
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell rc-calendar-month-panel-selected-cell rc-calendar-month-panel-current-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell rc-calendar-month-panel-selected-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <span
        class="rc-calendar-range-middle"
      >
        ~
      </span>
      <div
        class="rc-calendar-range-part rc-calendar-range-right"
      >
        <div
          class="rc-calendar-input-wrap"
        >
          <div
            class="rc-calendar-date-input-wrap"
          >
            <input
              class="rc-calendar-input "
              value=""
            />
          </div>
        </div>
        <div
          style="outline:none"
        >
          <div
            class="rc-calendar-header"
          >
            <div
              style="position:relative"
            >
              <span
                class="rc-calendar-my-select"
              >
                <a
                  class="rc-calendar-year-select"
                  role="button"
                  title="Choose a year"
                >
                  2018
                </a>
              </span>
              <a
                class="rc-calendar-next-year-btn"
                title="Next year (Control + right)"
              />
            </div>
          </div>
          <div
            class="rc-calendar-body"
          >
            <table
              cellspacing="0"
              class="rc-calendar-month-panel-table"
              role="grid"
            >
              <tbody
                class="rc-calendar-month-panel-tbody"
              >
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jan"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jan
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Feb"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Feb
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Mar"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Mar
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Apr"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Apr
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="May"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      May
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jun"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jun
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Jul"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Jul
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Aug"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Aug
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Sep"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Sep
                    </a>
                  </td>
                </tr>
                <tr
                  role="row"
                >
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Oct"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Oct
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Nov"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Nov
                    </a>
                  </td>
                  <td
                    class="rc-calendar-month-panel-cell"
                    role="gridcell"
                    title="Dec"
                  >
                    <a
                      class="rc-calendar-month-panel-month"
                    >
                      Dec
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="rc-calendar-footer rc-calendar-range-bottom"
    >
      <div
        class="rc-calendar-footer-btn"
      >
        <a
          class="rc-calendar-today-btn rc-calendar-today-btn-disabled"
          role="button"
          title="March 29, 2017"
        >
          Back to today
        </a>
      </div>
    </div>
  </div>
</div>
`;
